--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -11,8 +11,11 @@
 
     <artifactId>infra</artifactId>
     <packaging>pom</packaging>
-    <modules>
-    </modules>
 
+    <properties>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
