--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -13,9 +13,9 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>stat-client</module>
-        <module>stat-dto</module>
-        <module>stat-server</module>
+        <module>stats-client</module>
+        <module>stats-dto</module>
+        <module>stats-server</module>
     </modules>
 
     <properties>
@@ -28,7 +28,7 @@
         <dependencies>
             <dependency>
                 <groupId>ru.practicum</groupId>
-                <artifactId>stat-dto</artifactId>
+                <artifactId>stats-dto</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
         </dependencies>
